--- a/.github/workflows/docker-image-build-and-push.yml
+++ b/.github/workflows/docker-image-build-and-push.yml
@@ -9,8 +9,6 @@ on:
     branches: [ main ]
     paths:
     - dockerfiles/pkg/Dockerfile #path in repo to Dockerfile
-    - src/Simplex/**
-    - src/setup.py
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -40,4 +38,4 @@ jobs:
           file: dockerfiles/pkg/Dockerfile #path in repo to Dockerfile
           platforms: linux/amd64
           push: true
-          tags: yalidt/pkg_optim:0.1
+          tags: ferubio/pkg_optim_kale:0.1
