--- a/dockerfiles/pkg/Dockerfile
+++ b/dockerfiles/pkg/Dockerfile
@@ -33,10 +33,12 @@ USER ${USER_BINDER}
 RUN jupyter notebook --generate-config && sed -i "s/#c.NotebookApp.password = .*/c.NotebookApp.password = u'sha1:115e429a919f:21911277af52f3e7a8b59380804140d9ef3e2380'/" /home/jovyan/.jupyter/jupyter_notebook_config.py
 ENV LC_ALL C.UTF-8
 ENV LANG C.UTF-8
+
+#RUN pip install $c --upgrade
+RUN pip install $PIP_PACKAGES_KALE --upgrade
+RUN jupyter labextension install kubeflow-kale-labextension
+
 VOLUME ["/shared_volume"]
-
 WORKDIR /
-
 ENV NB_PREFIX opturl
-
 ENTRYPOINT ["/usr/local/bin/jupyter", "lab", "--ip=0.0.0.0", "--no-browser", "--allow-root", "--LabApp.allow_origin='*'", "--LabApp.base_url=opturl"]
