--- a/dockerfiles/pkg/Dockerfile
+++ b/dockerfiles/pkg/Dockerfile
@@ -1,22 +1,41 @@
 FROM ubuntu:bionic
 ENV JUPYTERLAB_VERSION 1.1.0
 ENV USER_BINDER jovyan
-ENV DEBIAN_FRONTEND noninteractive 
-ENV DEB_BUILD_DEPS="sudo nano less git wget curl python3-dev python3-pip python3-setuptools"
-ENV DEB_PACKAGES=""
-ENV PIP_PACKAGES_COMMON="numpy"
 ENV PIP_PACKAGES_KALE="kubeflow-kale==0.6.1"
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && echo "America/Mexico_City" > /etc/timezone && apt-get install -y tzdata
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
-  echo "America/Mexico_City" > /etc/timezone && apt-get install -y tzdata
+RUN apt-get update && apt-get install -y \
+	    build-essential \
+            sudo \
+            nano \
+            less \
+            git \
+            python3-dev \
+            python3-pip \
+            python3-setuptools \
+            nodejs && pip3 install --upgrade pip
+            
+#RUN pip install $PIP_PACKAGES_COMMON --upgrade
+RUN pip install $PIP_PACKAGES_KALE --upgrade
+RUN jupyter labextension install kubeflow-kale-labextension
 
-RUN apt-get update && apt-get install -y $DEB_BUILD_DEPS $DEB_PACKAGES && pip3 install --upgrade pip  
+#Clona el repositorio
+RUN git clone https://github.com/optimizacion-2-2021-1-gh-classroom/practica-1-segunda-parte-yefovar.git 
+#Instala paquetes necesario
+RUN pip install practica-1-segunda-parte-yefovar/src/
+COPY requirements.txt .
+RUN pip3 install -r requirements.txt            
 
-RUN curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash - && apt-get install -y nodejs            
-
-RUN pip3 install jupyter "jupyterlab>=2.0.0,<3.0.0" --upgrade
- 
-RUN pip install --quiet "git+https://github.com/optimizacion-2-2021-1-gh-classroom/practica-1-segunda-parte-yefovar.git#egg=docs&subdirectory=src"
+RUN groupadd ${USER_BINDER}
+RUN useradd ${USER_BINDER} -g ${USER_BINDER} -m -s /bin/bash
+RUN echo 'jovyan ALL=(ALL:ALL) NOPASSWD:ALL' | (EDITOR='tee -a' visudo)
+RUN echo 'jovyan:qwerty' | chpasswd
+RUN pip3 install jupyter jupyterlab==$JUPYTERLAB_VERSION --upgrade
+RUN chown -R ${USER_BINDER}:${USER_BINDER} /home/jovyan/   #da permisos al usuario
+USER ${USER_BINDER}
+RUN jupyter notebook --generate-config && sed -i "s/#c.NotebookApp.password = .*/c.NotebookApp.password = u'sha1:115e429a919f:21911277af52f3e7a8b59380804140d9ef3e2380'/" /home/jovyan/.jupyter/jupyter_notebook_config.py
+ENV LC_ALL C.UTF-8
+ENV LANG C.UTF-8
 
 VOLUME ["/shared_volume"]
 
