--- a/dockerfiles/pkg/Dockerfile
+++ b/dockerfiles/pkg/Dockerfile
@@ -1,7 +1,6 @@
 FROM ubuntu:bionic
 ENV JUPYTERLAB_VERSION 1.1.0
 ENV USER_BINDER jovyan
-#ENV PIP_PACKAGES_KALE="kubeflow-kale==0.6.1"
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && echo "America/Mexico_City" > /etc/timezone && apt-get install -y tzdata
 
 RUN apt-get update && apt-get install -y \
@@ -13,11 +12,8 @@ RUN apt-get update && apt-get install -y \
             python3-dev \
             python3-pip \
             python3-setuptools \
-            nodejs && pip3 install --upgrade pip && \
-	    pip3 install --upgrade 
+            nodejs && pip3 install --upgrade pip
             
-RUN pip install kubeflow-kale --upgrade
-RUN jupyter labextension install kubeflow-kale-labextension
 
 #Clona el repositorio
 RUN git clone https://github.com/optimizacion-2-2021-1-gh-classroom/practica-1-segunda-parte-yefovar.git 
@@ -36,11 +32,3 @@ USER ${USER_BINDER}
 RUN jupyter notebook --generate-config && sed -i "s/#c.NotebookApp.password = .*/c.NotebookApp.password = u'sha1:115e429a919f:21911277af52f3e7a8b59380804140d9ef3e2380'/" /home/jovyan/.jupyter/jupyter_notebook_config.py
 ENV LC_ALL C.UTF-8
 ENV LANG C.UTF-8
-
-VOLUME ["/shared_volume"]
-
-WORKDIR /
-
-ENV NB_PREFIX opturl
-
-ENTRYPOINT ["/usr/local/bin/jupyter", "lab", "--ip=0.0.0.0", "--no-browser", "--allow-root", "--LabApp.allow_origin='*'", "--LabApp.base_url=opturl"]
