--- a/dockerfiles/pkg/Dockerfile
+++ b/dockerfiles/pkg/Dockerfile
@@ -1,8 +1,9 @@
 FROM ubuntu:bionic
 ENV JUPYTERLAB_VERSION 1.1.0
 ENV USER_BINDER jovyan
+ENV PIP_PACKAGES_KALE="kubeflow-kale==0.6.1"
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && echo "America/Mexico_City" > /etc/timezone && apt-get install -y tzdata
-#dummy line
+
 RUN apt-get update && apt-get install -y \
 	    build-essential \
             sudo \
@@ -18,7 +19,10 @@ RUN apt-get update && apt-get install -y \
 #Clona el repositorio
 RUN git clone https://github.com/optimizacion-2-2021-1-gh-classroom/practica-1-segunda-parte-yefovar.git 
 #Instala paquetes necesario
-RUN pip install practica-1-segunda-parte-yefovar/src/       
+RUN pip install practica-1-segunda-parte-yefovar/src/  
+
+RUN pip install $PIP_PACKAGES_KALE --upgrade
+RUN jupyter labextension install kubeflow-kale-labextension
 
 RUN groupadd ${USER_BINDER}
 RUN useradd ${USER_BINDER} -g ${USER_BINDER} -m -s /bin/bash
@@ -30,3 +34,11 @@ USER ${USER_BINDER}
 RUN jupyter notebook --generate-config && sed -i "s/#c.NotebookApp.password = .*/c.NotebookApp.password = u'sha1:115e429a919f:21911277af52f3e7a8b59380804140d9ef3e2380'/" /home/jovyan/.jupyter/jupyter_notebook_config.py
 ENV LC_ALL C.UTF-8
 ENV LANG C.UTF-8
+
+VOLUME ["/shared_volume"]
+
+WORKDIR /
+
+ENV NB_PREFIX opturl
+
+ENTRYPOINT ["/usr/local/bin/jupyter", "lab", "--ip=0.0.0.0", "--no-browser", "--allow-root", "--LabApp.allow_origin='*'", "--LabApp.base_url=opturl"]
