--- a/dockerfiles/pkg/Dockerfile
+++ b/dockerfiles/pkg/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:bionic
-ENV JUPYTERLAB_VERSION 1.1.0
+#ENV JUPYTERLAB_VERSION 1.1.0
 ENV USER_BINDER jovyan
 ENV PIP_PACKAGES_KALE="kubeflow-kale==0.6.1"
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && echo "America/Mexico_City" > /etc/timezone && apt-get install -y tzdata
@@ -25,7 +25,8 @@ RUN groupadd ${USER_BINDER}
 RUN useradd ${USER_BINDER} -g ${USER_BINDER} -m -s /bin/bash
 RUN echo 'jovyan ALL=(ALL:ALL) NOPASSWD:ALL' | (EDITOR='tee -a' visudo)
 RUN echo 'jovyan:qwerty' | chpasswd
-RUN pip3 install jupyter jupyterlab==$JUPYTERLAB_VERSION --upgrade
+#RUN pip3 install jupyter jupyterlab==$JUPYTERLAB_VERSION --upgrade
+RUN pip3 install jupyter "jupyterlab>=2.0.0,<3.0.0" --upgrade
 RUN chown -R ${USER_BINDER}:${USER_BINDER} /home/jovyan/   #da permisos al usuario
 USER ${USER_BINDER}
 RUN jupyter notebook --generate-config && sed -i "s/#c.NotebookApp.password = .*/c.NotebookApp.password = u'sha1:115e429a919f:21911277af52f3e7a8b59380804140d9ef3e2380'/" /home/jovyan/.jupyter/jupyter_notebook_config.py
